apps/fishvote/04-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fishvote-app
  namespace: fishvote

spec:
  replicas: 4
  selector:
    matchLabels:
      app: fishvote-app
  
  template:
    metadata:
      labels:
        app: fishvote-app
    
    spec:
      #imagePullSecrets:
      #- name: ghcr-pull
      
      containers:
      - name: app
        image: ghcr.io/dinosaurkeys/fishvote:1.0   # CHANGE THIS
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet: { path: /health, port: 3000 }
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet: { path: /health, port: 3000 }
          initialDelaySeconds: 20
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: fishvote
  namespace: fishvote
spec:
  selector:
    app: fishvote-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
